# paragrep

./: LICENSE  README.txt  help.hs  paragrep.cabal  paragrep.hs
Paragrep/: Executable.hs  Globals.hs  Lib.hs  Server.hs
legacy/newton/: Makefile  help.ml  rutils.ml
legacy/rivest_ernst/: README  help.c
webapp/: index.html  testapp.js
