Name:           paragrep 
Version:        0.1.1.1

License:                BSD3
License-file:           LICENSE
Stability:              Beta
Maintainer:		Ryan Newton <rrnewton@gmail.com>
Author:			Ryan Newton <rrnewton@gmail.com>, 
Synopsis:               Paragraph search of text files.  Flexible configuration of paragraph delineation.
HomePage:               https://github.com/rrnewton/paragrep/wiki
Description: 

   An expansion of Ron Rivest's 1988 'help' program for paragraph
   search.  This program is useful for searching a personal
   repository of ASCII notes.

   It supports flexible text file partitioning methods.  The user can
   configure a hierarchy of partitioning methods, ranging from whole
   files to dated entries inside files, to paragraphs and individual
   lines.


Category: Utilities
Cabal-Version: >=1.8
Tested-With: GHC == 7.0.1
-- Portability:            Untested on Windows.

build-type: Simple

source-repository head
  type:     git
  location: git://github.com/rrnewton/paragrep.git

-- ----------------------------------------------------------------------------------------------------
Executable paragrep 
  Main-is:        paragrep.hs
  Build-Depends: base >= 4 && < 5
               , bytestring
               , prettyclass, pretty
               , ansi-terminal
               , filepath, filemanip, directory
               , regex-posix
               , stringtable-atom
               , split
               , httpd-shed
               , network
               , containers
               , json
               , HTTP

  GHC-Options:    -O2 
